# IPTV-List-Updater

./: Makefile.am  README.md  Rules-po.mak  configure.ac  gitignore
CONTROL/: control  postinst  postrm  preinst  prerm
IPKs/mips32el/: curl_7.24.0-r0_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git465+791e723-r12_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git479+b51c124-r12_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git498+183caec-r12_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git513+46ffeff-r12_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git516+de4da44-r12_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.31.+git568+84cff12-r13_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.32.+git589+61c596d-r14_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git598+258a2e3-r16_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git610+077df16-r16_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git615+3059d12-r16_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git669+71caefc-r14_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git672+f315a6f-r14_mips32el.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git677+c64c8be-r14_mips32el.ipk  librtmp1_2.4+git493+d0b3ae9-r4_mips32el.ipk  (+26 more)
IPKs/mips32el-nf/: curl_7.24.0-r0_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.10.+git391+c579c6d-r4_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.30.+git516+de4da44-r12_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.31.+git522+2d00eae-r13_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.40.+git655+bb270be-r16_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.61.+git1+e501083341-r26_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.61.+git833+d657a5d-r24_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.62.+git0+8a9e908053-r27.0_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.62.+git0+9a6f2d86ed-r27.0_mips32el-nf.ipk  enigma2-plugin-extensions-iptvlistupdater_1.62.+git5+29766d87de-r27.0_mips32el-nf.ipk  gst-plugins-bad-rtmp_0.10.23.1+git12245+fb0d870-r3_mips32el-nf.ipk  gst-plugins-bad-rtmp_0.10.23.1+git12254+cef47d8-r4_mips32el-nf.ipk  gst-plugins-bad-rtmp_0.10.23.1+git12256+0518367-r9_dm800.ipk  librtmp0_2.46c+git126+19d36368f6c1ec6fa55df319173ca93048309f9a-r0_mips32el-nf.ipk  librtmp1_2.4+git495+a91adbb-r4_mips32el-nf.ipk  python-textutils_2.7.2-r2.17-dream2-newnigma2_1_mips32el-nf.ipk  python-textutils_2.7.2-r8.17_mips32el-nf.ipk  udpxy_0.23+git83+e8219e1-r0_mips32el-nf.ipk  udpxy_1.0-1.0.23-9-r1_mips32el-nf.ipk
po/: IPTV-List-Updater.pot  Makefile.am  Sk.po  ar.po  de.po  en.po  fa.po  fr.po  hu.po  it.po  nl.po  pl.po  ru.po  sk.po  sr.po  tr.po
src/: Makefile.am  __init__.py  changelog.py  changelog.txt  credits.py  faq.py  faq.txt  iptv.py  locale.py  maintainer.info  plugin.py
src/scripts/: B_Digibit.sh  E_T_Home_Entertain.sh  E_Teledunet.sh  IPTV_Bangladesh.sh  IPTV_Bulgaria.sh  IPTV_FilmOn.sh  IPTV_France.sh  IPTV_Germany.sh  IPTV_India.sh  IPTV_Kurdisch.sh  IPTV_Music.sh  IPTV_Romania.sh  IPTV_Spain.sh  IPTV_Thai.sh  IPTV_Turkey_Laender.sh  IPTV_Turkey_Local.sh  IPTV_WebCam.sh  IPTV_XXX_Adult.sh  Makefile.am  Teledunet_id_update.sh  download_error.txt  end.txt  udpxy  update_scripts.sh
(+78 files in other folders)
