installdir = /usr/lib/enigma2/python/Plugins/Extensions/IPTV-List-Updater/scripts
install_DATA = *.sh udpxy

install-data-hook:
	chmod +x $(DESTDIR)$(installdir)/udpxy; \
	chmod +x $(DESTDIR)$(installdir)/B_Digibit.sh; \
	chmod +x $(DESTDIR)$(installdir)/E_T_Home_Entertain.sh; \
	chmod +x $(DESTDIR)$(installdir)/E_Teledunet.sh; \
	chmod +x $(DESTDIR)$(installdir)/Teledunet_id_update.sh;
	

